// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Guide > Guide baseVue demo works fine 1`] = `
<div
  class="guide-demo"
  data-v-4e055ece=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-4e055ece=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      用户引导
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`Guide > Guide customPopoverVue demo works fine 1`] = `
<div
  class="guide-demo"
  data-v-760ff522=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-760ff522=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      用户引导
      
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`Guide > Guide dialogBodyVue demo works fine 1`] = `
<div
  class="dialog-body"
  data-v-172a4578=""
>
  <p
    data-v-172a4578=""
  >
    用户引导的说明文案
  </p>
  <div
    class="img-wrapper"
    data-v-172a4578=""
  >
    <img
      alt="demo"
      data-v-172a4578=""
      src="https://tdesign.gtimg.com/demo/demo-image-1.png"
    />
  </div>
</div>
`;

exports[`Guide > Guide dialogVue demo works fine 1`] = `
<div
  class="guide-demo"
  data-v-365702ae=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-365702ae=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      用户引导
      
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`Guide > Guide mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-051cd1e9=""
>
  <h1
    class="title"
    data-v-051cd1e9=""
  >
    Guide 引导
  </h1>
  <p
    class="summary"
    data-v-051cd1e9=""
  >
    逐步骤进行指引或解释说明的组件，常用于用户不熟悉的或需进行特别强调的页面。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-051cd1e9=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础引导
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="guide-demo"
        data-v-051cd1e9=""
        data-v-4e055ece=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-4e055ece=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            用户引导
          </span>
          <!---->
        </button>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-051cd1e9=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        不带遮罩的引导
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="guide-demo"
        data-v-051cd1e9=""
        data-v-230fbba9=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-230fbba9=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            用户引导
            
          </span>
          <!---->
        </button>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-051cd1e9=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        弹窗形式的引导
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="guide-demo"
        data-v-051cd1e9=""
        data-v-365702ae=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-365702ae=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            用户引导
            
          </span>
          <!---->
        </button>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-051cd1e9=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        气泡与弹窗混合的引导
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="guide-demo"
        data-v-051cd1e9=""
        data-v-45f2f5e4=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-45f2f5e4=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            用户引导
            
          </span>
          <!---->
        </button>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-051cd1e9=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义气泡
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="guide-demo"
        data-v-051cd1e9=""
        data-v-760ff522=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-760ff522=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            用户引导
            
          </span>
          <!---->
        </button>
        <!---->
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Guide > Guide myPopoverVue demo works fine 1`] = `
<div
  class="my-popover"
  data-v-eb2238b1=""
>
  <svg
    class="t-icon t-icon-arrow-up pop-icon"
    data-v-eb2238b1=""
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="arrow-up"
    >
      <path
        d="M17.5 10.5L12 5L6.5 10.5M12 6.25V19.25"
        id="stroke1"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
    </g>
  </svg>
  <p
    class="popover-desc"
    data-v-eb2238b1=""
  >
    自定义的图形或说明文案，用来解释或指导该功能使用。
  </p>
  <div
    class="popover-action"
    data-v-eb2238b1=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-extra-small t-button--base t-button--light t-button--rectangle"
      data-v-eb2238b1=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
         跳过 
        
      </span>
      <!---->
    </button>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Guide > Guide noMaskVue demo works fine 1`] = `
<div
  class="guide-demo"
  data-v-230fbba9=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-230fbba9=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      用户引导
      
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`Guide > Guide popoverDialogVue demo works fine 1`] = `
<div
  class="guide-demo"
  data-v-45f2f5e4=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-45f2f5e4=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      用户引导
      
    </span>
    <!---->
  </button>
  <!---->
</div>
`;
